[FIX] sap.m.PlanningCalendar-tap on appointment on mobile should not fire rowSelectionChange.
When the user clicks on appointment in a row that is not selected, for
mobile devices this used to throw rowSelectionChange event.

The fix details:
-CalendarRow click handler is removed, the same logic is put inside
'tap' event handler

-Tap event was not called for desktop. As tap event is a common event
for both desktop(click) and mobile (touch) devices the
mousedown/mouseup, touchstart/touchend should happen for one and the
same target dom element, otherwise the event won't be fired.
This wasn't the case for CalendarRow, because styling the focus
inserted additional dom element (pseudo :after) which actually
is being tha target element at mouseup. So the user
'mousedown'-s on the appointment dom element, but 'mouseup'-s
at the:after element. To fix this, 'pointer-events: none' added for
the additional dom element (:after).

(Cherry pick from 9dd3681db067b949bc0b6b8522ca38c37200e173)

BCP: 002075129500004765332016
CR-Id: 012006153200000065432017

--- a/src/themelib_sap_belize/src/sap/ui/unified/themes/sap_belize/CalendarRow.less
+++ b/src/themelib_sap_belize/src/sap/ui/unified/themes/sap_belize/CalendarRow.less
@@ -24,6 +24,7 @@ html.sap-desktop .sapUiCalendarApp:focus > .sapUiCalendarAppCont:after{
 	bottom: 1px;
 	content: "";
 	border: 0.0625rem dotted @sapUiContentFocusColor;
+	pointer-events: none;
 }
 
 html.sap-desktop .sapUiCalendarAppSel:focus > .sapUiCalendarAppCont:after{
